// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`caracterización — respuesta completa de mapRawToProduct (T-02) > Barrita de cereal 1`] = `
{
  "aiEnriched": undefined,
  "bgColor": "#f8faf7",
  "brand": "",
  "category": "Alimento",
  "categoryEmoji": "🍽️",
  "dataSource": "off",
  "emoji": "📦",
  "fito": "nofito",
  "flagged": true,
  "id": "7790000000000",
  "imageUrl": null,
  "ingredients": [
    {
      "delta": 0,
      "desc": "Cereal integral. Rico en fibra beta-glucano que reduce el colesterol.",
      "flag": false,
      "impact": "none",
      "marker": false,
      "name": "Avena",
      "position": 1,
      "sev": "green",
    },
    {
      "delta": -13,
      "desc": "Azúcar líquida refinada. Alta carga glucémica. Presente en productos ultraprocesados.",
      "flag": true,
      "impact": "alto",
      "marker": false,
      "name": "Jarabe de glucosa",
      "position": 2,
      "sev": "red",
    },
    {
      "delta": -13,
      "desc": "Azúcar refinada. En exceso promueve inflamación, resistencia a insulina y desequilibrio del microbioma.",
      "flag": true,
      "impact": "alto",
      "marker": false,
      "name": "Azúcar",
      "position": 3,
      "sev": "red",
    },
    {
      "delta": -6,
      "desc": "Extraído mediante procesos industriales con solventes químicos y altas temperaturas. Rico en omega-6 en proporciones no presentes en la alimentación tradicional humana.",
      "flag": true,
      "impact": "alto",
      "marker": false,
      "name": "Aceite de girasol",
      "position": 4,
      "sev": "red",
    },
    {
      "delta": -6,
      "desc": "Un frasco de miel es un alimento. La misma miel dentro de una barrita es azúcar añadida, y cumple la misma función que cumpliría el azúcar refinada. Fitogenix evalúa la función del ingrediente en la formulación, no su prestigio.",
      "flag": true,
      "impact": "alto",
      "marker": false,
      "name": "Miel",
      "position": 5,
      "sev": "red",
    },
    {
      "delta": -1,
      "desc": "Saborizante no especificado. Puede ser natural o artificial. Verificar origen.",
      "flag": false,
      "impact": "bajo",
      "marker": true,
      "name": "Saborizante",
      "position": 6,
      "sev": "yellow",
    },
    {
      "delta": -3,
      "desc": "Emulsionante no especificado. Verificar el número E o el origen.",
      "flag": false,
      "impact": "medio",
      "marker": true,
      "name": "Emulsionante",
      "position": 7,
      "sev": "orange",
    },
  ],
  "name": "Barrita de cereal",
  "noScore": null,
  "nutrition": {
    "calories": null,
    "carbs": null,
    "cholesterol": null,
    "fats": null,
    "fiber": null,
    "protein": null,
    "satFats": null,
    "sodium": null,
    "sugars": null,
    "transFat": null,
  },
  "productId": "",
  "score": 23,
  "scoreAvailable": true,
  "scoreColor": "#dc2626",
  "scoreLabel": "MALO",
  "subtitle": null,
  "tagline": "No lo recomendamos",
}
`;

exports[`caracterización — respuesta completa de mapRawToProduct (T-02) > Coca-Cola 1`] = `
{
  "aiEnriched": undefined,
  "bgColor": "#f8faf7",
  "brand": "",
  "category": "Bebidas",
  "categoryEmoji": "🍽️",
  "dataSource": "off",
  "emoji": "📦",
  "fito": "nofito",
  "flagged": true,
  "id": "7790000000000",
  "imageUrl": null,
  "ingredients": [
    {
      "delta": 0,
      "desc": "Ingrediente base. Esencial para la vida.",
      "flag": false,
      "impact": "none",
      "marker": false,
      "name": "Agua carbonatada",
      "position": 1,
      "sev": "green",
    },
    {
      "delta": 0,
      "desc": "Azúcar refinada. En exceso promueve inflamación, resistencia a insulina y desequilibrio del microbioma.",
      "flag": true,
      "impact": "alto",
      "marker": false,
      "name": "Azúcar",
      "position": 2,
      "sev": "red",
    },
    {
      "delta": 0,
      "desc": "Aditivo industrial sin clasificación específica en nuestra base. Se evalúa con impacto medio: la falta de clasificación no equivale a ausencia de riesgo.",
      "detail": "Aditivo alimentario",
      "flag": false,
      "impact": "medio",
      "marker": false,
      "name": "Colorante caramelo E150d",
      "position": 3,
      "sev": "orange",
    },
    {
      "delta": 0,
      "desc": "Aditivo industrial sin clasificación específica en nuestra base. Se evalúa con impacto medio: la falta de clasificación no equivale a ausencia de riesgo.",
      "detail": "Aditivo alimentario",
      "flag": false,
      "impact": "medio",
      "marker": false,
      "name": "Acidulante ácido fosfórico",
      "position": 4,
      "sev": "orange",
    },
    {
      "delta": 0,
      "desc": "No tenemos una evaluación específica de este ingrediente todavía.",
      "flag": false,
      "impact": "bajo",
      "marker": true,
      "name": "Aromas naturales",
      "position": 5,
      "sev": "yellow",
    },
    {
      "delta": 0,
      "desc": "Estimulante natural. Segura en cantidades moderadas para la mayoría de adultos.",
      "flag": false,
      "impact": "none",
      "marker": false,
      "name": "Cafeína",
      "position": 6,
      "sev": "green",
    },
  ],
  "name": "Coca-Cola",
  "noScore": null,
  "nutrition": {
    "calories": 42,
    "carbs": null,
    "cholesterol": null,
    "fats": null,
    "fiber": null,
    "protein": null,
    "satFats": null,
    "sodium": 0,
    "sugars": 10.6,
    "transFat": null,
  },
  "productId": "",
  "score": 13,
  "scoreAvailable": true,
  "scoreColor": "#dc2626",
  "scoreLabel": "MALO",
  "subtitle": null,
  "tagline": "No lo recomendamos",
}
`;

exports[`caracterización — respuesta completa de mapRawToProduct (T-02) > Coca-Cola Zero 1`] = `
{
  "aiEnriched": undefined,
  "bgColor": "#f8faf7",
  "brand": "",
  "category": "Bebidas",
  "categoryEmoji": "🍽️",
  "dataSource": "off",
  "emoji": "📦",
  "fito": "none",
  "flagged": false,
  "id": "7790000000000",
  "imageUrl": null,
  "ingredients": [
    {
      "delta": 0,
      "desc": "Ingrediente base. Esencial para la vida.",
      "flag": false,
      "impact": "none",
      "marker": false,
      "name": "Agua carbonatada",
      "position": 1,
      "sev": "green",
    },
    {
      "delta": -7,
      "desc": "Aditivo industrial sin clasificación específica en nuestra base. Se evalúa con impacto medio: la falta de clasificación no equivale a ausencia de riesgo.",
      "detail": "Aditivo alimentario",
      "flag": false,
      "impact": "medio",
      "marker": false,
      "name": "Colorante caramelo E150d",
      "position": 2,
      "sev": "orange",
    },
    {
      "delta": -7,
      "desc": "Aditivo industrial sin clasificación específica en nuestra base. Se evalúa con impacto medio: la falta de clasificación no equivale a ausencia de riesgo.",
      "detail": "Aditivo alimentario",
      "flag": false,
      "impact": "medio",
      "marker": false,
      "name": "Acidulante ácido fosfórico",
      "position": 3,
      "sev": "orange",
    },
    {
      "delta": -3,
      "desc": "Edulcorante no especificado. Verificar si es natural (stevia) o sintético.",
      "flag": false,
      "impact": "medio",
      "marker": true,
      "name": "Aspartamo",
      "position": 4,
      "sev": "orange",
    },
    {
      "delta": -1,
      "desc": "No tenemos una evaluación específica de este ingrediente todavía.",
      "flag": false,
      "impact": "bajo",
      "marker": true,
      "name": "Aromas",
      "position": 5,
      "sev": "yellow",
    },
    {
      "delta": 0,
      "desc": "Estimulante natural. Segura en cantidades moderadas para la mayoría de adultos.",
      "flag": false,
      "impact": "none",
      "marker": false,
      "name": "Cafeína",
      "position": 6,
      "sev": "green",
    },
  ],
  "name": "Coca-Cola Zero",
  "noScore": null,
  "nutrition": {
    "calories": 1,
    "carbs": null,
    "cholesterol": null,
    "fats": null,
    "fiber": null,
    "protein": null,
    "satFats": null,
    "sodium": null,
    "sugars": 0,
    "transFat": null,
  },
  "productId": "",
  "score": 47,
  "scoreAvailable": true,
  "scoreColor": "#f97316",
  "scoreLabel": "MODERADO",
  "subtitle": null,
  "tagline": "Consumilo con consciencia",
}
`;

exports[`caracterización — respuesta completa de mapRawToProduct (T-02) > Galletitas tipo Oreo 1`] = `
{
  "aiEnriched": undefined,
  "bgColor": "#f8faf7",
  "brand": "",
  "category": "Alimento",
  "categoryEmoji": "🍽️",
  "dataSource": "off",
  "emoji": "📦",
  "fito": "nofito",
  "flagged": true,
  "id": "7790000000000",
  "imageUrl": null,
  "ingredients": [
    {
      "delta": -13,
      "desc": "Harina refinada sin germen ni salvado. Alta carga glucémica. Preferir integral.",
      "flag": true,
      "impact": "alto",
      "marker": false,
      "name": "Harina de trigo",
      "position": 1,
      "sev": "red",
    },
    {
      "delta": -13,
      "desc": "Azúcar refinada. En exceso promueve inflamación, resistencia a insulina y desequilibrio del microbioma.",
      "flag": true,
      "impact": "alto",
      "marker": false,
      "name": "Azúcar",
      "position": 2,
      "sev": "red",
    },
    {
      "delta": -13,
      "desc": "Cuando la etiqueta no dice qué grasa es, asumimos la más económica del mercado, que es un aceite de semilla refinado.",
      "flag": true,
      "impact": "alto",
      "marker": false,
      "name": "Aceite vegetal",
      "position": 3,
      "sev": "red",
    },
    {
      "delta": -1,
      "desc": "Cacao tratado con solución alcalina para suavizar acidez y oscurecer color. El proceso reduce buena parte de los flavonoides que hacen valioso al cacao.",
      "flag": false,
      "impact": "bajo",
      "marker": false,
      "name": "Cacao alcalinizado",
      "position": 4,
      "sev": "yellow",
    },
    {
      "delta": -6,
      "desc": "Azúcar líquida refinada. Alta carga glucémica. Presente en productos ultraprocesados.",
      "flag": true,
      "impact": "alto",
      "marker": false,
      "name": "Jarabe de glucosa",
      "position": 5,
      "sev": "red",
    },
    {
      "delta": -3,
      "desc": "Aditivo industrial sin clasificación específica en nuestra base. Se evalúa con impacto medio: la falta de clasificación no equivale a ausencia de riesgo.",
      "detail": "Aditivo alimentario",
      "flag": false,
      "impact": "medio",
      "marker": false,
      "name": "Leudantes",
      "position": 6,
      "sev": "orange",
    },
    {
      "delta": 0,
      "desc": "Mineral esencial. El exceso eleva la presión arterial. Preferir sal marina sin refinar.",
      "flag": false,
      "impact": "none",
      "marker": false,
      "name": "Sal",
      "position": 7,
      "sev": "green",
    },
    {
      "delta": -3,
      "desc": "Emulsionante. Generalmente de soja transgénica. Contiene fitoestrógenos.",
      "flag": false,
      "impact": "medio",
      "marker": true,
      "name": "Emulsionante",
      "position": 8,
      "sev": "orange",
    },
    {
      "delta": -1,
      "desc": "Saborizante no especificado. Puede ser natural o artificial. Verificar origen.",
      "flag": false,
      "impact": "bajo",
      "marker": true,
      "name": "Saborizante",
      "position": 9,
      "sev": "yellow",
    },
  ],
  "name": "Galletitas de chocolate rellenas",
  "noScore": null,
  "nutrition": {
    "calories": 480,
    "carbs": null,
    "cholesterol": null,
    "fats": null,
    "fiber": null,
    "protein": null,
    "satFats": 9,
    "sodium": 400,
    "sugars": 38,
    "transFat": null,
  },
  "productId": "",
  "score": 12,
  "scoreAvailable": true,
  "scoreColor": "#dc2626",
  "scoreLabel": "MALO",
  "subtitle": null,
  "tagline": "No lo recomendamos",
}
`;

exports[`caracterización — respuesta completa de mapRawToProduct (T-02) > Jamón cocido con ascorbato 1`] = `
{
  "aiEnriched": undefined,
  "bgColor": "#f8faf7",
  "brand": "",
  "category": "Fiambres",
  "categoryEmoji": "🍽️",
  "dataSource": "off",
  "emoji": "📦",
  "fito": "none",
  "flagged": false,
  "id": "7790000000000",
  "imageUrl": null,
  "ingredients": [
    {
      "delta": 0,
      "desc": "Proteína animal completa. Rica en hierro hem, zinc, vitamina B12 y creatina.",
      "flag": false,
      "impact": "none",
      "marker": false,
      "name": "Carne de cerdo",
      "position": 1,
      "sev": "green",
    },
    {
      "delta": 0,
      "desc": "Ingrediente base. Esencial para la vida.",
      "flag": false,
      "impact": "none",
      "marker": false,
      "name": "Agua",
      "position": 2,
      "sev": "green",
    },
    {
      "delta": 0,
      "desc": "Mineral esencial. El exceso eleva la presión arterial. Preferir sal marina sin refinar.",
      "flag": false,
      "impact": "none",
      "marker": false,
      "name": "Sal",
      "position": 3,
      "sev": "green",
    },
    {
      "delta": -6,
      "desc": "Azúcar refinada. En exceso promueve inflamación, resistencia a insulina y desequilibrio del microbioma.",
      "flag": true,
      "impact": "alto",
      "marker": false,
      "name": "Azúcar",
      "position": 4,
      "sev": "red",
    },
    {
      "delta": -3,
      "desc": "Estabilizante no especificado. Generalmente gomas o fosfatos. Verificar origen.",
      "flag": false,
      "impact": "medio",
      "marker": true,
      "name": "Estabilizantes",
      "position": 5,
      "sev": "orange",
    },
    {
      "delta": -1,
      "desc": "No tenemos una evaluación específica de este ingrediente todavía.",
      "flag": false,
      "impact": "bajo",
      "marker": false,
      "name": "Ascorbato de sodio",
      "position": 6,
      "sev": "yellow",
    },
    {
      "delta": -6,
      "desc": "Conservante en carnes procesadas. IARC Grupo 2A; EFSA 2023 redujo niveles permitidos. Forma nitrosaminas cancerígenas al cocinar.",
      "flag": true,
      "impact": "alto",
      "marker": false,
      "name": "Nitrito de sodio",
      "position": 7,
      "sev": "red",
    },
  ],
  "name": "Jamón cocido",
  "noScore": null,
  "nutrition": {
    "calories": null,
    "carbs": null,
    "cholesterol": null,
    "fats": null,
    "fiber": null,
    "protein": null,
    "satFats": null,
    "sodium": null,
    "sugars": null,
    "transFat": null,
  },
  "productId": "",
  "score": 49,
  "scoreAvailable": true,
  "scoreColor": "#f97316",
  "scoreLabel": "MODERADO",
  "subtitle": null,
  "tagline": "Consumilo con consciencia",
}
`;

exports[`caracterización — respuesta completa de mapRawToProduct (T-02) > Leche entera 1`] = `
{
  "aiEnriched": undefined,
  "bgColor": "#f8faf7",
  "brand": "",
  "category": "LáCteos",
  "categoryEmoji": "🍽️",
  "dataSource": "off",
  "emoji": "📦",
  "fito": "fito",
  "flagged": false,
  "id": "7790000000000",
  "imageUrl": null,
  "ingredients": [
    {
      "delta": 0,
      "desc": "Lácteo íntegro. Fuente completa de proteínas, calcio y grasas liposolubles.",
      "flag": false,
      "impact": "none",
      "marker": false,
      "name": "Leche entera",
      "position": 1,
      "sev": "green",
    },
  ],
  "name": "Leche entera",
  "noScore": null,
  "nutrition": {
    "calories": 61,
    "carbs": null,
    "cholesterol": null,
    "fats": 3.2,
    "fiber": null,
    "protein": null,
    "satFats": 2,
    "sodium": null,
    "sugars": 4.6,
    "transFat": null,
  },
  "productId": "",
  "score": 80,
  "scoreAvailable": true,
  "scoreColor": "#16a34a",
  "scoreLabel": "EXCELENTE",
  "subtitle": null,
  "tagline": "Lo recomendamos",
}
`;

exports[`caracterización — respuesta completa de mapRawToProduct (T-02) > Mayonesa 1`] = `
{
  "aiEnriched": undefined,
  "bgColor": "#f8faf7",
  "brand": "",
  "category": "Alimento",
  "categoryEmoji": "🍽️",
  "dataSource": "off",
  "emoji": "📦",
  "fito": "none",
  "flagged": true,
  "id": "7790000000000",
  "imageUrl": null,
  "ingredients": [
    {
      "delta": -13,
      "desc": "Extraído mediante procesos industriales con solventes químicos y altas temperaturas. Rico en omega-6 en proporciones no presentes en la alimentación tradicional humana.",
      "flag": true,
      "impact": "alto",
      "marker": false,
      "name": "Aceite de girasol",
      "position": 1,
      "sev": "red",
    },
    {
      "delta": 0,
      "desc": "Ingrediente base. Esencial para la vida.",
      "flag": false,
      "impact": "none",
      "marker": false,
      "name": "Agua",
      "position": 2,
      "sev": "green",
    },
    {
      "delta": 0,
      "desc": "Uno de los alimentos más completos. Proteína de máxima calidad, colina, vitaminas A/D/B12.",
      "flag": false,
      "impact": "none",
      "marker": false,
      "name": "Yema de huevo",
      "position": 3,
      "sev": "green",
    },
    {
      "delta": 0,
      "desc": "Conservante natural de fermentación. Regula glucemia y beneficia el microbioma.",
      "flag": false,
      "impact": "none",
      "marker": false,
      "name": "Vinagre",
      "position": 4,
      "sev": "green",
    },
    {
      "delta": -6,
      "desc": "Azúcar refinada. En exceso promueve inflamación, resistencia a insulina y desequilibrio del microbioma.",
      "flag": true,
      "impact": "alto",
      "marker": false,
      "name": "Azúcar",
      "position": 5,
      "sev": "red",
    },
    {
      "delta": 0,
      "desc": "Mineral esencial. El exceso eleva la presión arterial. Preferir sal marina sin refinar.",
      "flag": false,
      "impact": "none",
      "marker": false,
      "name": "Sal",
      "position": 6,
      "sev": "green",
    },
    {
      "delta": 0,
      "desc": "Ácido cítrico natural. Conservante y antioxidante. Sin procesamiento.",
      "flag": false,
      "impact": "none",
      "marker": false,
      "name": "Jugo de limón",
      "position": 7,
      "sev": "green",
    },
    {
      "delta": -3,
      "desc": "Conservante no especificado. Sin transparencia sobre el compuesto exacto.",
      "flag": false,
      "impact": "medio",
      "marker": false,
      "name": "Conservante",
      "position": 8,
      "sev": "orange",
    },
  ],
  "name": "Mayonesa",
  "noScore": null,
  "nutrition": {
    "calories": 420,
    "carbs": null,
    "cholesterol": null,
    "fats": 45,
    "fiber": null,
    "protein": null,
    "satFats": 5,
    "sodium": 800,
    "sugars": null,
    "transFat": null,
  },
  "productId": "",
  "score": 38,
  "scoreAvailable": true,
  "scoreColor": "#f97316",
  "scoreLabel": "MODERADO",
  "subtitle": null,
  "tagline": "Consumilo con consciencia",
}
`;

exports[`caracterización — respuesta completa de mapRawToProduct (T-02) > Nutella (etiqueta en inglés de OFF) 1`] = `
{
  "aiEnriched": undefined,
  "bgColor": "#f8faf7",
  "brand": "",
  "category": "Alimento",
  "categoryEmoji": "🍽️",
  "dataSource": "off",
  "emoji": "📦",
  "fito": "none",
  "flagged": true,
  "id": "7790000000000",
  "imageUrl": null,
  "ingredients": [
    {
      "delta": -13,
      "desc": "Azúcar refinada. En exceso promueve inflamación, resistencia a insulina y desequilibrio del microbioma.",
      "flag": true,
      "impact": "alto",
      "marker": false,
      "name": "Azúcar",
      "position": 1,
      "sev": "red",
    },
    {
      "delta": -7,
      "desc": "Grasa de alto rendimiento industrial, refinada a altas temperaturas. Se usa por su costo y su estabilidad al horneado, no por su aporte al alimento.",
      "flag": false,
      "impact": "medio",
      "marker": false,
      "name": "Aceite de palma",
      "position": 2,
      "sev": "orange",
    },
    {
      "delta": 0,
      "desc": "Fruto seco rico en vitamina E, grasas monoinsaturadas y magnesio.",
      "flag": false,
      "impact": "none",
      "marker": false,
      "name": "Avellanas",
      "position": 3,
      "sev": "green",
    },
    {
      "delta": 0,
      "desc": "Superfood real. Flavanoles cardioprotectores, magnesio y teobromina estimulante.",
      "flag": false,
      "impact": "none",
      "marker": false,
      "name": "Cacao",
      "position": 4,
      "sev": "green",
    },
    {
      "delta": 0,
      "desc": "Lácteo desgrasado. Pierde vitaminas liposolubles (A, D, K) al quitar la grasa.",
      "flag": false,
      "impact": "none",
      "marker": false,
      "name": "Leche descremada",
      "position": 5,
      "sev": "green",
    },
    {
      "delta": 0,
      "desc": "Proteína láctea completa. Alta biodisponibilidad. Todos los aminoácidos esenciales.",
      "flag": false,
      "impact": "none",
      "marker": false,
      "name": "Suero de leche",
      "position": 6,
      "sev": "green",
    },
    {
      "delta": -3,
      "desc": "Emulsionante no especificado. Verificar el número E o el origen.",
      "flag": false,
      "impact": "medio",
      "marker": true,
      "name": "Lecitina",
      "position": 7,
      "sev": "orange",
    },
    {
      "delta": 0,
      "desc": "Especia natural. Real y beneficiosa.",
      "flag": false,
      "impact": "none",
      "marker": false,
      "name": "Vainilla",
      "position": 8,
      "sev": "green",
    },
  ],
  "name": "7790000000000",
  "noScore": null,
  "nutrition": {
    "calories": 539,
    "carbs": null,
    "cholesterol": null,
    "fats": null,
    "fiber": null,
    "protein": null,
    "satFats": 9.6,
    "sodium": 0,
    "sugars": 44.2,
    "transFat": null,
  },
  "productId": "",
  "score": 28,
  "scoreAvailable": true,
  "scoreColor": "#f97316",
  "scoreLabel": "MODERADO",
  "subtitle": null,
  "tagline": "Consumilo con consciencia",
}
`;

exports[`caracterización — respuesta completa de mapRawToProduct (T-02) > Papas fritas de paquete 1`] = `
{
  "aiEnriched": undefined,
  "bgColor": "#f8faf7",
  "brand": "",
  "category": "Alimento",
  "categoryEmoji": "🍽️",
  "dataSource": "off",
  "emoji": "📦",
  "fito": "none",
  "flagged": false,
  "id": "7790000000000",
  "imageUrl": null,
  "ingredients": [
    {
      "delta": 0,
      "desc": "Tubérculo con vitamina C y potasio. Alto índice glucémico. Preferir con piel.",
      "flag": false,
      "impact": "none",
      "marker": false,
      "name": "Papa",
      "position": 1,
      "sev": "green",
    },
    {
      "delta": -13,
      "desc": "Extraído mediante procesos industriales con solventes químicos y altas temperaturas. Rico en omega-6 en proporciones no presentes en la alimentación tradicional humana.",
      "flag": true,
      "impact": "alto",
      "marker": false,
      "name": "Aceite de girasol alto oleico",
      "position": 2,
      "sev": "red",
    },
    {
      "delta": 0,
      "desc": "Mineral esencial. El exceso eleva la presión arterial. Preferir sal marina sin refinar.",
      "flag": false,
      "impact": "none",
      "marker": false,
      "name": "Sal",
      "position": 3,
      "sev": "green",
    },
  ],
  "name": "Papas fritas",
  "noScore": null,
  "nutrition": {
    "calories": 530,
    "carbs": null,
    "cholesterol": null,
    "fats": 32,
    "fiber": null,
    "protein": null,
    "satFats": 3,
    "sodium": 600,
    "sugars": null,
    "transFat": null,
  },
  "productId": "",
  "score": 48,
  "scoreAvailable": true,
  "scoreColor": "#f97316",
  "scoreLabel": "MODERADO",
  "subtitle": null,
  "tagline": "Consumilo con consciencia",
}
`;

exports[`caracterización — respuesta completa de mapRawToProduct (T-02) > Yogur natural entero 1`] = `
{
  "aiEnriched": undefined,
  "bgColor": "#f8faf7",
  "brand": "",
  "category": "LáCteos",
  "categoryEmoji": "🍽️",
  "dataSource": "off",
  "emoji": "📦",
  "fito": "fito",
  "flagged": false,
  "id": "7790000000000",
  "imageUrl": null,
  "ingredients": [
    {
      "delta": 0,
      "desc": "Lácteo natural. Fuente de proteínas completas, calcio y vitaminas B.",
      "flag": false,
      "impact": "none",
      "marker": false,
      "name": "Leche parcialmente descremada",
      "position": 1,
      "sev": "green",
    },
    {
      "delta": 0,
      "desc": "Fermentos lácticos: sin objeciones desde la mirada Fitogenix.",
      "flag": false,
      "impact": "none",
      "marker": false,
      "name": "Fermentos lacticos",
      "position": 2,
      "sev": "green",
    },
  ],
  "name": "Yogur natural",
  "noScore": null,
  "nutrition": {
    "calories": 45,
    "carbs": null,
    "cholesterol": null,
    "fats": null,
    "fiber": null,
    "protein": null,
    "satFats": null,
    "sodium": null,
    "sugars": 4.7,
    "transFat": null,
  },
  "productId": "",
  "score": 86,
  "scoreAvailable": true,
  "scoreColor": "#16a34a",
  "scoreLabel": "EXCELENTE",
  "subtitle": null,
  "tagline": "Lo recomendamos",
}
`;
